# rust-python-sum-factorial

./: .justfile  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  requirements.txt
python/src/: main.py
src/: lib.rs
